# trebuchet

./: .arcconfig  .arclint  .gitignore  example.hs  run.sh  stack.yaml  trebuchet.cabal
dbs/: sin.db
doc/: pku_api.txt
doc/json_examples/: datablock.txt  datablock_metadata.txt  datablock_name_ad_hoc.txt  datablock_name_alias.txt  datablock_name_job_result.txt  datablock_name_recipe.txt  datablock_source_api_job.txt  datablock_source_api_user.txt  datablock_source_data_pipeline.txt  job.txt  job_create.txt  job_template.txt
doc/json_schema/: cas_auth.json  client_error.json  datablock.json  datablock_array.json  datablock_create.json  datablock_metadata.json  datablock_name.json  datablock_record_filter.json  datablock_url.json  filter_query.json  job.json  job_array.json  job_create.json  job_template.json  job_template_array.json  user.json
job_templates/: job_template__PKU_KJ_updated.json
src/: DemoMain.hs  Main.hs  broken_Main.hs
src/Treb/: #JSON.hs#  BadRegex.hs  Combinators.hs  Config.hs  Demo.hs  Env.hs  ExtJSON.hs  ExtTypes.hs  Filter.hs  Index.hs  JSON.hs  Routes.hs  Types.hs
src/Treb/DB/: Schema.hs  Statements.hs
src/Treb/Routes/: .hs  DataBlockAll.hs  DataBlockCreate.hs  DataBlockFilter.hs  DataBlockGet.hs  DataBlockGetFilter.hs  DataBlockGetMetadata.hs  DataBlockPutMetadata.hs  DataBlockUpload.hs  FileUpload.hs  Helpers.hs  JobCreate.hs  JobFilter.hs  JobTemplateFilter.hs  Types.hs  UserFilter.hs  UserGet.hs
tests/: ExampleGen.hs  Tests.hs
tests/Treb/Test/: Gen.hs  JSON.hs  Samples.hs  Schema.hs  Utils.hs
