name:                trebuchet
version:             0.1.0.0
synopsis:            Data Siege Engine
-- description:
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          twhitak@its.jnj.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable trebuchet
  main-is:             Main.hs
  other-modules:       Treb.BadRegex
                     , Treb.Combinators
                     , Treb.Config
                     , Treb.DB.Schema
                     , Treb.DB.Statements
                     , Treb.Env
                     , Treb.Filter
                     , Treb.JSON
                     , Treb.Routes
                     , Treb.Routes.DataBlockCreate
                     , Treb.Routes.DataBlockFilter
                     , Treb.Routes.DataBlockGet
                     , Treb.Routes.DataBlockGetFilter
                     , Treb.Routes.DataBlockGetMetadata
                     , Treb.Routes.DataBlockPutMetadata
                     , Treb.Routes.DataBlockUpload
                     , Treb.Routes.FileUpload
                     , Treb.Routes.Helpers
                     , Treb.Routes.JobCreate
                     , Treb.Routes.JobFilter
                     , Treb.Routes.JobTemplateFilter
                     , Treb.Routes.Types
                     , Treb.Routes.UserFilter
                     , Treb.Routes.UserGet
                     , Treb.Types
  other-extensions:    OverloadedStrings, ExtendedDefaultRules
  build-depends:       base
                     , aeson
                     , containers
                     , text
                     , time
                     , vector
                     , stm
                     , bytestring
                     , protoblob
                     , protodb
                     , mtl
                     , regex-tdfa
                     , base64-bytestring
                     , protocol-buffers
                     , mime
                     , scientific
                     , time
                     , iso8601-time
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , warp-tls
                     , directory
                     , filepath
                     , hasql
                     , hasql-postgres
                     , hasql-backend
                     , monad-control
                     , mysql-simple
                     , either
                     , transformers
                     , hinotify
                     , cookie
                     , csv-conduit
                     , unordered-containers
                     , attoparsec
                     , random
                     , network-uri
                     , wai-cors
                     , resourcet
                     , wai-extra
                     , optparse-applicative
                     , ansi-wl-pprint
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O0 -fwarn-unused-imports
